fixed the grid so its not stretching from one side of the screen to the other.

--- a/folder/style.css
+++ b/folder/style.css
@@ -2,3 +2,8 @@
     width: 100px;
     height: 100px;
 }
+.grid{
+    margin:0 auto;
+    max-width: 50%;
+    height:auto;
+}
